[workspace]
members = ["crates/*", "delta-inspect", "python"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.75"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
delta_kernel = { version = "0.1.1" }
# delta_kernel = { path = "../delta-kernel-rs/kernel" }

# arrow
arrow = { version = "52" }
arrow-arith = { version = "52" }
arrow-array = { version = "52", features = ["chrono-tz"] }
arrow-buffer = { version = "52" }
arrow-cast = { version = "52" }
arrow-ipc = { version = "52" }
arrow-json = { version = "52" }
arrow-ord = { version = "52" }
arrow-row = { version = "52" }
arrow-schema = { version = "52" }
arrow-select = { version = "52" }
object_store = { version = "0.10.1" }
parquet = { version = "52" }

# datafusion
datafusion = { git = "https://github.com/spiceai/datafusion.git", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }
datafusion-expr = { git = "https://github.com/spiceai/datafusion.git", folder = "datafusion/expr", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }
datafusion-common = { git = "https://github.com/spiceai/datafusion.git", folder = "datafusion/common", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }
datafusion-proto = { git = "https://github.com/spiceai/datafusion.git", folder = "datafusion/proto", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }
datafusion-sql = { git = "https://github.com/spiceai/datafusion.git", folder = "datafusion/sql", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }
datafusion-physical-expr = { git = "https://github.com/spiceai/datafusion.git", folder = "datafusion/physical-expr", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }
datafusion-functions = { git = "https://github.com/spiceai/datafusion.git", folder = "datafusion/functions", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }
datafusion-functions-array = { git = "https://github.com/spiceai/datafusion.git", folder = "datafusion/functions-array", rev = "a155dee3293a5536ca5c5514f3e87884aa32e5ae" }

# serde
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"

# "stdlib"
bytes = { version = "1" }
chrono = { version = ">0.4.34", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
regex = { version = "1" }
thiserror = { version = "1" }
url = { version = "2" }
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }
